codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_context_tokens_used.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? 查看快捷键                                                    123K 已使用  "
