codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_esc_hint_primed.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  esc 再次编辑上一条消息                                                        " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
