codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_mode_indicator_narrow_overlap_hides.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  计划模式 (shift+tab 切换模式)                  "
