codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_mode_indicator_running_hides_hint.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? 查看快捷键 · 计划模式                                                                        100% 上下文剩余  "
