codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / 输入命令                         ! 输入 shell 命令                          " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (40, " "), (42, " "), (51, " "), (53, " ")]
"  ctrl + j 换行                      tab 排队消息                               " Hidden by multi-width symbols: [(12, " "), (14, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"  @ 查看文件路径                     ctrl + v 粘贴图片                          " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"  ctrl + g 在外部编辑器中编辑        esc esc 编辑上一条消息                     " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " ")]
"  ctrl + r 搜索历史                  ctrl + c 退出                              " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (47, " "), (49, " ")]
"  ⌥ + , reasoning down               ⌥ + . reasoning up                         "
"  shift + tab 切换模式                                                          " Hidden by multi-width symbols: [(15, " "), (17, " "), (19, " "), (21, " ")]
"  ctrl + t 查看记录                                                             " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " ")]
