codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_context_running.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  ? 查看快捷键                                             72% 上下文剩余  "
